Migrate List to Util.Collections for Windows compatibility